@@ -12,12 +12,10 @@ AM_INIT_AUTOMAKE(srptools, 0.0.4)
 AC_PROG_CC
 
 # Checks for libraries.
-AC_CHECK_LIB(sysfs, sysfs_open_class, [],
-    AC_MSG_ERROR([sysfs_open_class() not found.  srptools requires libsysfs.]))
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h limits.h stdlib.h string.h unistd.h pci/pci.h)
+AC_CHECK_HEADERS(fcntl.h limits.h stdlib.h string.h unistd.h)
 
 # Checks for typedefs, structures, and compiler characteristics.
 
